<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/general_bg"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:id="@+id/logoImageIV"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-180dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/aline_logo_foreground_with_shopping_bag" />

    <TextView
        android:id="@+id/registerTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageIV"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/registerTxt"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerTV"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintText" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailET"
        android:layout_marginTop="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/textColor"
        android:textColorHint="@color/hintText" />

    <TextView
        android:id="@+id/errorMessageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordET"
        android:layout_marginTop="10dp"
        android:text=""
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/errorMessageTV">

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/p_offwhite"
            android:text="@string/register"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_grey"
            android:text="@string/cancel"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>